turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:68: error: expected start of definition
	override def run() {
                 ^Turmite:100: error: Unmatched closing brace '}' ignored here
}
^